[project]
name = "score-inverse-problems"
version = "0.1.0"
description = "Solving Inverse Problems in Medical Imaging with Score-Based Generative Models"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "ml-collections==0.1.0",
    "tensorflow-gan==2.0.0",
    "tensorflow-hub==0.12.0",
    "tensorflow-io",
    "tensorflow-datasets",
    "tensorflow==2.9.0",
    "tensorflow-probability==0.17.0",
    "tensorflow-addons",
    "absl-py>=0.12.0",
    "numpy>=1.20,<2.0",
    "typing-extensions>=4.0.0",
    "flax @ git+https://github.com/google/flax.git@8b2e56e93602ff9fcd62647f28b8145e0e0c10a8",
    "jax[tpu]==0.3.25",
    "scikit-image",
    "odl",
    "piq",
    "torch",
    "torchvision",
    "SimpleITK",
]

[tool.uv]
prerelease = "allow"
find-links = [
    "https://storage.googleapis.com/jax-releases/jax_releases.html",
    "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
]
