[project]
name = "score-inverse-problems"
version = "0.1.0"
description = "Solving Inverse Problems in Medical Imaging with Score-Based Generative Models"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "ml-collections==0.1.0",
    "tensorflow-gan==2.0.0",
    "tensorflow-hub==0.12.0",
    "tensorflow-io==0.18.0",
    "tensorflow-datasets==4.3.0",
    "tensorflow==2.5.0",
    "tensorflow-probability==0.13.0",
    "tensorflow-addons==0.13.0",
    "absl-py==0.12.0",
    "flax @ git+https://github.com/google/flax.git@8b2e56e93602ff9fcd62647f28b8145e0e0c10a8",
    "jax==0.2.18",
    "jaxlib==0.1.69+cuda111",
    "scikit-image",
    "odl",
    "piq",
    "torch",
    "torchvision",
    "SimpleITK",
]

[tool.uv]
find-links = ["https://storage.googleapis.com/jax-releases/jax_releases.html", "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"]
override-dependencies = ["typing-extensions>=4.0.0"]
